<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morfador</string>
    <string name="hello_world">Informe em que molalidade você esta.</string>
    <string name="player">Player</string>
    <string name="nerd">NERD</string>
    <string name="gamer">Gamer</string>
    <string name="sexy">Sexy</string>
    <string name="dormindo">Dormindo</string>
    <string name="respirando">Respirando</string>
    <string name="gay">Gay</string>
    <string name="aquilo">Fazendo</string>
    <string name="action_settings">Settings</string>
    <string name="modo">Modo</string>
    <string name="ativado">ativado.</string>
    <string name="p.onde">Onde?</string>
    <string name="p.mapa">Adicionar mapa?</string>
    <string name="p.modalidade">O que estou fazendo nesta modalidade.</string>
    <string name="p.foto">Foto</string>
    <string name="p.compartilhar">Compartilhar</string>
    <string name="title_activity_chama_player">ChamaPlayer</string>
    <string name="compartilarAmigos">Compartilhe com o seu grupo.</string>
    <string name="title_activity_notificacao">NotificacaoActivity</string>
    <string name="notificacao">Notificações</string>
    <string name="title_activity_splash">Splash</string>

</resources>
