<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brancoAzulado"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.opendoor.morfador.MainActivity$PlaceholderFragment" >
    
    

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                style="@style/style_buton"
                android:text="@string/player"
                 />

            <Button
                android:id="@+id/button2"
                style="@style/style_buton"
                android:layout_marginLeft="30dp"
                android:text="@string/nerd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp" >

            <Button
                android:id="@+id/button3"
                style="@style/style_buton"
                android:text="@string/sexy" />

            <Button
                android:id="@+id/button4"
                style="@style/style_buton"
                android:layout_marginLeft="30dp"
                android:text="@string/gamer" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp" >

            <Button
                android:id="@+id/button5"
                style="@style/style_buton"
                android:text="@string/dormindo" />

            <Button
                android:id="@+id/button6"
                style="@style/style_buton"
                android:layout_marginLeft="30dp"
                android:text="@string/respirando" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             >

            <Button
                android:id="@+id/button7"
                style="@style/style_buton"
                android:text="@string/gay" />

            <Button
                android:id="@+id/button8"
                style="@style/style_buton"
                android:layout_marginLeft="30dp"
                android:text="@string/aquilo" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="20sp"
        android:layout_marginBottom="30dp" />

</RelativeLayout>